--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.3.2",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
