--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-font-global": "^1.0.0",
     "react-native-maps": "^1.3.2",
+    "react-native-typography": "^1.4.1",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
