--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-font-global": "^1.0.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.3.2",
     "react-native-typography": "^1.4.1",
     "react-native-web": "~0.18.7"
