--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native": "0.69.6",
     "react-native-font-global": "^1.0.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "0.31.1",
     "react-native-typography": "^1.4.1",
     "react-native-web": "~0.18.7"
   },
